--- a/public/css/apps4clouds.css
+++ b/public/css/apps4clouds.css
@@ -1996,19 +1996,13 @@ div#heading h1, .main-content h1.heading {
 }
 
 /* Top menu */
-.top-all-menu {
-    float:left;
-    left: 200px;
-    position: absolute;
-}
-
 div#top-nav ul#top-menu {
     float: left;
 }
 
 /* All menu */
-div#top-nav ul#all-menu {
-    float: left;
+.top-all-menu {
+    float:right;
 }
 
 /* Quick create menu */
