--- a/public/css/personalized.css
+++ b/public/css/personalized.css
@@ -161,7 +161,7 @@
 .modal-header {
     padding: 9px 15px;
     margin-bottom: 20px;
-    background-color: #048497;
+    background-color: #1bc2a2;
     color: white;
 }
 
