--- a/public/css/apps4clouds.css
+++ b/public/css/apps4clouds.css
@@ -1104,11 +1104,8 @@ div#heading{
 
 /* Language selector in the signin page */
 #signin .locales {
-    position: absolute;
-    top: 0px;
-    right: 0px;
-    margin: 10px 20px;
-    border: 1px solid #DBDBDB;
+    margin: 12px 10px 0 0;
+    float: right;
     padding: 5px;
     color: #000;
 }
@@ -1126,9 +1123,7 @@ div#heading{
 
 /* Welcome text in the signin page */
 #signin .welcome-text {
-    position: absolute;
-    left: 40px;
-    width: 450px;
+    margin: 10px 10px 20px 10px;
     font-family: 'Rouge Script', cursive;
     color: #fff;
 }
@@ -1162,9 +1157,6 @@ div#heading{
 }
 #signin .form-row {
     padding: 0 0px 10px 0;
-}
-#signin .buttons {
-    margin: 0 0 0 102px;
 }
 #signin .buttons .button-general {
     padding: 0px;
@@ -1901,7 +1893,6 @@ div#container{
 }
 
 #signin-form {
-    width: 400px;
     margin: 10px auto 20px;
     padding: 20px 30px;
 }
@@ -1958,18 +1949,16 @@ body#signup .col-two {
     padding: 0 20px 0 0;
 }
 
-body#signup div.main-content .inner{
+#signup div.main-content .inner{
     margin:0 auto;
 }
-body#signin div.main-content .content-inner{
+#signin div.main-content .content-inner{
     margin:0;
 }
-body#signin div#container{
-    width:400px;
+#signin #container{
     margin: auto;
 }
 #signin-form {
-    width: 415px;
     margin: 10px auto 20px;
     padding: 20px;
 }
@@ -1977,9 +1966,6 @@ body#signin div#container{
     padding: 0px;
     width: 92px;
     white-space: nowrap;
-}
-#signin-form input {
-    width: 250px;
 }
 #signin-footer {
     clear:both;
