--- a/public/css/apps4clouds.css
+++ b/public/css/apps4clouds.css
@@ -2154,23 +2154,31 @@ div#top-nav ul#top-menu {
 }
 
 /* Footer */
-div#footer {
+#footer {
     padding: 0 0 30px;
     background-color: #f5f5f5;
+    color: #999;
 }
-
-div#footer .content {
+#footer a {
+    color: #999;
+}
+#footer .content {
     text-align: center;
     margin: 50px auto 20px auto;
     color: #aaa;
 }
-
-div#footer {
-    color: #999;
+#footer .links {
+    display: inline-block;
+    position: relative;
+    top: 4px;
 }
-
-div#footer a {
-    color: #999;
+#footer .links li {
+    float: left;
+    margin-right: 10px;
+}
+#footer .links li a {
+    color: inherit;
+    text-decoration: none;
 }
 
 /* Columns */
